# diablo_arm

./: README.md
diablo_description/: CMakeLists.txt  package.xml
diablo_description/launch/: rviz.launch.py
diablo_description/urdf/: arm.urdf.xacro  diablo.xacro
diablo_gazebo_plugin/: CMakeLists.txt  package.xml
diablo_gazebo_plugin/src/: .low_level_controller.cpp  .motor_controller.cpp  low_level_controller.cpp  motor_controller.cpp  sample_plugin.cpp
diablo_simulation/: CMakeLists.txt  package.xml
diablo_simulation/launch/: gazebo.launch.py  gazebo2.launch.py  gazebo_arm.launch.py  gazebo_noarm.launch.py  gazebo_noplugin.launch.py  sample.launch.py
diablo_simulation/models/diablo/: model.sdf
diablo_simulation/models/diablo_arm/: model.config  model.sdf
diablo_simulation/models/diablo_noarm/: model.config  model.sdf
diablo_simulation/models/diablo_noplugin/: model.config  model.sdf
diablo_simulation/models/j2n6s300/: model.config  model.sdf
diablo_simulation/worlds/: diablo.world  diablo_arm.world  diablo_noarm.world  diablo_noplugin.world  sample.world
template/dependencies/ros2_cm730/: LICENSE  README.md
template/dependencies/ros2_cm730/button_publisher/: CMakeLists.txt  package.xml
template/dependencies/ros2_cm730/button_publisher/include/button_publisher/: button_publisher.hpp  visibility_control.h
template/dependencies/ros2_cm730/button_publisher/src/: button_publisher.cpp  button_publisher_node.cpp
template/dependencies/ros2_cm730/buttonpublisher_msg/: CMakeLists.txt  package.xml
template/dependencies/ros2_cm730/buttonpublisher_msg/msg/: CM730Button.msg
template/dependencies/ros2_cm730/cm730_bringup/: CMakeLists.txt  package.xml
template/dependencies/ros2_cm730/cm730_bringup/launch/: cm730_bringup.launch.py  cm730_bringup_nodriver.launch.py
template/dependencies/ros2_cm730/cm730_bringup/src/: cm730_composed.cpp
template/dependencies/ros2_cm730/cm730_examples/: head_zero.py  package.xml  ping_motors.py  setup.cfg  setup.py  torque_off.py  torque_on.py
template/dependencies/ros2_cm730/cm730controller/: CMakeLists.txt  package.xml
template/dependencies/ros2_cm730/cm730controller/include/cm730controller/: cm730controller.hpp  cm730table.hpp  datautil.hpp  mx28table.hpp  visibility_control.h
template/dependencies/ros2_cm730/cm730controller/src/: cm730controller.cpp  cm730controller_node.cpp
template/dependencies/ros2_cm730/cm730controller_msgs/: CMakeLists.txt  package.xml
template/dependencies/ros2_cm730/cm730controller_msgs/msg/: CM730EepromTable.msg  CM730Info.msg  CM730RamTable.msg  MX28Command.msg  MX28EepromTable.msg  MX28Info.msg  MX28InfoArray.msg  MX28RamTable.msg
template/dependencies/ros2_cm730/cm730driver/: CMakeLists.txt  README.md  package.xml
template/dependencies/ros2_cm730/cm730driver/include/cm730driver/: bulkreadservice.hpp  cm730device.hpp  cm730driver.hpp  cm730service.hpp  pingservice.hpp  readservice.hpp  syncwriteservice.hpp  visibility_control.h  writeservice.hpp
template/dependencies/ros2_cm730/cm730driver/src/: cm730device.cpp  cm730driver.cpp  cm730driver_node.cpp
template/dependencies/ros2_cm730/cm730driver/test/: cm730service_tests.cpp
template/dependencies/ros2_cm730/cm730driver_msgs/: CMakeLists.txt  package.xml
template/dependencies/ros2_cm730/cm730driver_msgs/msg/: RangeReadRequest.msg  RangeReadResult.msg
template/dependencies/ros2_cm730/cm730driver_msgs/srv/: BulkRead.srv  Ping.srv  Read.srv  SyncWrite.srv  Write.srv
template/dependencies/ros2_cm730/imu_publisher/: CMakeLists.txt  package.xml
template/dependencies/ros2_cm730/imu_publisher/include/imu_publisher/: imu_publisher.hpp  visibility_control.h
template/dependencies/ros2_cm730/imu_publisher/src/: imu_publisher.cpp  imu_publisher_node.cpp
template/dependencies/ros2_cm730/mx_joint_controller/: CMakeLists.txt  package.xml
template/dependencies/ros2_cm730/mx_joint_controller/include/mx_joint_controller/: mx_joint_controller.hpp  visibility_control.h
template/dependencies/ros2_cm730/mx_joint_controller/src/: mx_joint_controller.cpp  mx_joint_controller_node.cpp
template/dependencies/ros2_cm730/mx_joint_controller/test/: mx_joint_controller_tests.cpp
template/dependencies/ros2_cm730/mx_joint_controller_msgs/: CMakeLists.txt  package.xml
template/dependencies/ros2_cm730/mx_joint_controller_msgs/msg/: JointCommand.msg
template/ros2_boldbot/boldbot_description/: CMakeLists.txt  model.config  package.xml
template/ros2_boldbot/boldbot_description/meshes/: armcover.stl  armcoverb.stl  hipbracketb.stl  mx28.stl  mx28b.stl  neckbracketb.stl  nicefootl.stl  nicefootlb.stl  nicefootr.stl  nicefootrb.stl  shin.stl  shinb.stl  shoulderbracket.stl  shoulderbracketb.stl  thigh.stl  thighb.stl
template/ros2_boldbot/boldbot_description/urdf/: boldbot.urdf.xacro
template/ros2_boldbot/boldbot_gazebo_plugin/: CMakeLists.txt  package.xml
template/ros2_boldbot/boldbot_gazebo_plugin/include/boldbot_gazebo_plugin/: boldbot_gazebo_plugin.hpp
template/ros2_boldbot/boldbot_gazebo_plugin/src/: boldbot_gazebo_plugin.cpp
template/ros2_boldbot/boldbot_sim/: CMakeLists.txt  package.xml
template/ros2_boldbot/boldbot_sim/launch/: boldbot_sim_bringup.launch.py
template/ros2_boldbot/boldbot_sim/meshes/: ball.dae  rchl_field_kid_2019.dae  rchl_goal_2019.dae
template/ros2_boldbot/boldbot_sim/worlds/: rchl_kid_2019.world
