<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>boldbot_sim</name>
  <version>0.1.0</version>
  <description>
    BoldBot RoboCup Humanoid League simulation
  </description>
  <maintainer email="sgvandijk@gmail.com">Sander van Dijk</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>ros2run</exec_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>boldbot_description</exec_depend>
  <exec_depend>boldbot_gazebo_plugin</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/.." />
  </export>
</package>
