<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>cm730_examples</name>
  <version>0.1.0</version>
  <description>Examples using the CM730 packages</description>

  <maintainer email="sgvandijk@gmail.com">Sander G. van Dijk</maintainer>
  <license>Apache License 2.0</license>

  <author>Sander G. van Dijk</author>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>cm730controller_msgs</exec_depend>
  <exec_depend>cm730driver_msgs</exec_depend>
  <exec_depend>mx_joint_controller_msgs</exec_depend>

  <!-- These test dependencies are optional
  Their purpose is to make sure that the code passes the linters -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
